--- a/src/app/pages/como/como.component.html
+++ b/src/app/pages/como/como.component.html
@@ -3,8 +3,9 @@
   <div class="paso1">
     <div class="row">
       <div class="col-sm ">
+        <div class="h110 d-none d-sm-block "></div>
         <div class="paso">
-          <h3 class="align-middle" >Paso 1</h3>
+          <h3 class="align-middle">Paso 1</h3>
         </div>
       </div>
       <div class="col-sm ">
@@ -46,6 +47,7 @@
     <div class="row">
       <div class="col-sm">
         <div class="paso">
+          <div class="h110 d-none d-sm-block "></div>
           <h3>Paso 2</h3>
         </div>
       </div>
@@ -82,6 +84,7 @@
     <div class="row">
       <div class="col-sm">
         <div class="paso">
+          <div class="h110 d-none d-sm-block "></div>
           <h3>Paso 3</h3>
         </div>
       </div>
