--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -11,7 +11,9 @@
 
       <div class="login-inicio p-5">
         <app-login-inicio></app-login-inicio>
-
+        <p class="mt-5 mb-3 text-muted">
+          No recuerdas tu Contraseña? <a [routerLink]="'/recuperar'" >Haz click aquí.</a>
+        </p>
       </div>
 
     </div>
