se agregan cambios en la cuenta corriente

--- a/src/app/pages/abono/abono.component.html
+++ b/src/app/pages/abono/abono.component.html
@@ -19,17 +19,25 @@
       </p>
       <p>Para transferencia electrónica:</p>
       <div class="alert alert-dismissible alert-primary">
-        Nombre empresa: TECNOSEG
-        <br> Rut: 76.145.716-0
-        <br> Banco: BCI
-        <br> Cuenta: Corriente
-        <br> N° de cuenta: 54005078
-        <br> Correo: abonos@123depositos.com
-        <br>
+        Solicita los datos bancarios de nuestra empresa en las redes sociales: <br>
+          <ul class="list-unstyled sociales" >
+            <li>
+              <a href="https://www.Instagram.com/123depositos/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+            </li>
+            <li>
+              <a href="https://wa.me/56935689629" target="_blank"><i class="fab fa-whatsapp"></i> Whatsapp</a>
+            </li>
+            <li>
+              <a href="mailto:contacto@123depositos.com" target="_blank"><i class="far fa-envelope"></i> contacto@123depositos.com</a>
+            </li>
+          </ul>
 
       </div>
-      <p>O depositos en caja en sucursales BCI (
-        <a href="https://www.bci.cl/personas/sucursales" target="_blank">Ver sucursales más cercanas</a>)</p>
+      <p>O depositos en caja en sucursales banco Santander (
+        <a href="https://www.santander.cl/sucursales_santander/sucursales/index.asp" target="_blank">Ver sucursales más cercanas</a>)</p>
 
       <div class="form-group">
         <label for="exampleInputFile">Adjuntar comprobante</label>
