--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="transferencias">Transferencias <span class="caret"></span></a>
           <div class="dropdown-menu" aria-labelledby="transferencias">
 
-            <a class="dropdown-item" routerLink="abono">Transferencia</a>
+            <a class="dropdown-item" routerLink="abono">Transferir</a>
             <a class="dropdown-item" routerLink="transferencias">Mis transferencias</a>
           </div>
         </li>
