--- a/src/app/pages/como/como.component.html
+++ b/src/app/pages/como/como.component.html
@@ -51,21 +51,35 @@
           <h3>Paso 2</h3>
         </div>
       </div>
-      <div class="col-sm">
-        <div class="imagen">
-          <img src="assets/img/como/paso2-1.png" alt="Paso2">
-        </div>
-        <div class="texto">
-          A. Realiza tu abono a la cuenta empresa por transferencia o en sucursales BCI.
-        </div>
-      </div>
+      
       <div class="col-sm">
         <div class="imagen">
           <img src="assets/img/como/paso2-2.png" alt="Paso2">
         </div>
         <div class="texto">
-          B. Datos Bancarios de la empresa: TECNOSEG <br> Nombre de la empresa: TECNOSEG <br> RUT: 76.145.716-0 <br> Banco:
-          BCI <br> Tipo de cuenta: Corriente <br> N° de cuenta: 54005078 <br> Correo: abonos@123depositos.com
+          A. Solicita los datos bancarios de nuestra empresa en las redes sociales: <br>
+          <ul class="list-unstyled sociales" >
+            <li>
+              <a href="https://www.Instagram.com/123depositos/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+            </li>
+            <li>
+              <a href="https://wa.me/56935689629" target="_blank"><i class="fab fa-whatsapp"></i> Whatsapp</a>
+            </li>
+            <li>
+              <a href="mailto:contacto@123depositos.com" target="_blank"><i class="far fa-envelope"></i> contacto@123depositos.com</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso2-1.png" alt="Paso2">
+        </div>
+        <div class="texto">
+          B. Realiza tu abono a la cuenta empresa por transferencia o en <a href="https://www.santander.cl/sucursales_santander/sucursales/index.asp" target="_blank">sucursales banco Santander.</a>
         </div>
       </div>
       <div class="col-sm">
@@ -73,7 +87,7 @@
           <img src="assets/img/como/paso2-3.png" alt="Paso2">
         </div>
         <div class="texto">
-          C. Envía el comprobante del depósito a abonos@123depositos.com
+          C. Envía el comprobante del depósito a contacto@123depositos.com
         </div>
       </div>
 
