--- a/src/app/pages/transferencias/transferencias.component.html
+++ b/src/app/pages/transferencias/transferencias.component.html
@@ -24,6 +24,7 @@
           <th scope="col">Monto</th>
           <th scope="col">Tasa</th>
           <th scope="col">Estado</th>
+          <th scope="col">Tipo Pago</th>
         </tr>
       </thead>
       <tbody>
@@ -43,6 +44,7 @@
               <i class="fas fa-info-circle pl-1"></i>
             </a>
           </td>
+          <td> {{ tran.transferencia.tipo_pago }} </td>
         </tr>
 
       </tbody>
