--- a/src/app/pages/inicio/login-inicio/login-inicio.component.html
+++ b/src/app/pages/inicio/login-inicio/login-inicio.component.html
@@ -3,7 +3,7 @@
   <form ngNativeValidate class="form-signin " (submit)="loginClick()">
 
     <h3>Iniciar sesión</h3>
-    <p>Ingresa tu correo y contraseña para ingresar a 123dopositos.</p>
+    <p>Ingresa tu correo y contraseña para ingresar a 123depósitos.</p>
 
     <input [(ngModel)]="correo" name="correo" type="email" id="inputEmail" class="form-control" placeholder="Correo electrónico"
       required autofocus>
