--- a/src/app/pages/inicio/simula-cambio/simula-cambio.component.html
+++ b/src/app/pages/inicio/simula-cambio/simula-cambio.component.html
@@ -1,7 +1,7 @@
 <div class="tasa p-4">
 
   <div class="titulo">
-    <span class="titulo-negrita">Tasa del día </span> <br> <span class="titulo-tasa"> {{ tasa }} Bs/CLP</span>
+    <span class="titulo-negrita">Tasa del día </span> <br> <span class="titulo-tasa"> {{ mostrarTasa() }} Bs/CLP</span>
   </div>
   <div class="formulario ">
     <form  action="">
