--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,52 +1,78 @@
 <div class="container">
 
-  <form ngNativeValidate [formGroup]="forma" (submit)="enviar()">
-    <div class="registro" *ngIf="!_usuario.usuario.id_usuario">
-      <h2>Registro de Usuario</h2>
-      <div class="form-group ">
-        <label>Correo electrónico</label>
-        <input formControlName="correo" name="correo" type="email" class="form-control " placeholder="Ingrese Correo" required>
-      </div>
-      <div class="form-group ">
-        <label>Contraseña</label>
-        <input formControlName="clave" name="clave" type="password" class="form-control " placeholder="Contraseña" required minlength="6">
-      </div>
-      <hr>
-      <div class="form-group ">
-        <label>Apellido paterno</label>
-        <input formControlName="paterno" name="paterno" type="text" class="form-control " placeholder="Apellido paterno" required>
-      </div>
-      <div class="form-group ">
-        <label>Apellido materno</label>
-        <input formControlName="materno" name="materno" type="text" class="form-control " placeholder="Apellido materno" required>
-      </div>
-      <div class="form-group ">
-        <label>Nombres</label>
-        <input formControlName="nombres" name="nombres" type="text" class="form-control " placeholder="Nombres" required>
-      </div>
-      <div class="form-group ">
-        <label>Rut o CI</label>
-        <input formControlName="ci" name="ci" type="text" class="form-control " placeholder="RUT o CI" required minlength="3" >
-      </div>
-      <div class="form-group ">
-        <label>País</label>
-        <select formControlName="pais" name="pais" class="form-control" required >
-          <option value="Chile">Chile</option>
+  <div class="row">
+    <div class="col-md-6 marco p-4">
 
-        </select>
+
+
+
+      <form ngNativeValidate [formGroup]="forma" (submit)="enviar()">
+        <div class="registro" *ngIf="!_usuario.usuario.id_usuario">
+          <h2>Registro de Usuario</h2>
+          <div class="form-group ">
+            <label>Correo electrónico</label>
+            <input formControlName="correo" name="correo" type="email" class="form-control " placeholder="Ingrese Correo"
+              required>
+          </div>
+          <div class="form-group ">
+            <label>Contraseña</label>
+            <input formControlName="clave" name="clave" type="password" class="form-control " placeholder="Contraseña"
+              required minlength="6">
+          </div>
+          <hr>
+          <div class="form-group ">
+            <label>Apellido paterno</label>
+            <input formControlName="paterno" name="paterno" type="text" class="form-control " placeholder="Apellido paterno"
+              required>
+          </div>
+          <div class="form-group ">
+            <label>Apellido materno</label>
+            <input formControlName="materno" name="materno" type="text" class="form-control " placeholder="Apellido materno"
+              required>
+          </div>
+          <div class="form-group ">
+            <label>Nombres</label>
+            <input formControlName="nombres" name="nombres" type="text" class="form-control " placeholder="Nombres"
+              required>
+          </div>
+          <div class="form-group ">
+            <label>Rut o CI</label>
+            <input formControlName="ci" name="ci" type="text" class="form-control " placeholder="RUT o CI" required
+              minlength="3">
+          </div>
+          <div class="form-group ">
+            <label>Teléfono</label>
+            <input formControlName="telefono" name="telefono" type="tel" class="form-control " placeholder="Teléfono" >
+          </div>
+          <div class="form-group ">
+            <label>País</label>
+            <select formControlName="pais" name="pais" class="form-control" required>
+              <option value="Chile">Chile</option>
+
+            </select>
+          </div>
+          <button class="btn btn-success ">{{ (!cargando ? 'Registrar' : 'Cargando ...' ) }}</button>
+
+        </div>
+        <div class="registro" *ngIf="_usuario.usuario.id_usuario">
+
+          <h2>Se ha completado su registro</h2>
+
+        </div>
+      </form>
+    </div>
+
+    <div class="col-md-6 fondo-azul imagen-fondo ">
+
+      <div class="texto-derecho align-middle">
+        Registro de usuario
       </div>
-      <button class="btn btn-success ">{{ (!cargando ? 'Registrar' : 'Cargando ...' ) }}</button>
 
     </div>
 
-  </form>
-
-
-  <div class="registro" *ngIf="_usuario.usuario.id_usuario">
-
-    <h2>Se ha completado su registro</h2>
-
   </div>
+
+
 
 
 
