--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -13,6 +13,9 @@
         <app-login-inicio></app-login-inicio>
         
       </div>
+      <div>
+        <a routerLink="/login-vendedor">Acceso Vendedores</a>
+      </div>
 
     </div>
     <div class="col-md-6 fondo-azul imagen-fondo h600">
