--- a/src/app/pages/vendedor/vendedor.component.html
+++ b/src/app/pages/vendedor/vendedor.component.html
@@ -4,29 +4,40 @@
   <hr />
   <div class="row">
     <div class="col-auto">
-      <label class="lbl-ind">Ganancia:</label> <span class="valor">{{ porc }} %</span>
+      <label class="lbl-ind">Ganancia:</label>
+      <span class="valor">{{ porc }} %</span>
     </div>
     <div class="col-auto">
-      <label class="lbl-ind">Tasa:</label> <span class="valor"> {{ tasa }} </span>
+      <label class="lbl-ind">Tasa:</label>
+      <span class="valor"> {{ tasa }} </span>
     </div>
   </div>
   <!-- COMPONENTE BLOQUE -->
-  <div *ngFor="let bloque of vendedor.bloques" >
+  <div *ngFor="let bloque of vendedor.bloques">
     <app-bloque [bloque]="bloque"></app-bloque>
   </div>
 
-
   <div>
     <ul class="pagination">
-      <li class="page-item disabled">
-        <a class="page-link" href="#">&laquo;</a>
+      <li *ngFor="let pag of vendedor.paginas" class="page-item">
+        <a
+          class="page-link"
+          [ngClass]="vendedor.actual === pag ? 'active' : ''"
+          (click)="vendedor.getBloques(pag)"
+          >{{ pag + 1 }}</a
+        >
       </li>
-      <li class="page-item active"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#">4</a></li>
-      <li class="page-item"><a class="page-link" href="#">5</a></li>
-      <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
+      <!--
+        <li class="page-item disabled">
+          <a class="page-link" href="#">&laquo;</a>
+        </li>
+        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">4</a></li>
+        <li class="page-item"><a class="page-link" href="#">5</a></li>
+        <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
+      -->
     </ul>
   </div>
 </div>
